--- a/site-root/index.html
+++ b/site-root/index.html
@@ -6,11 +6,17 @@
     <title>Calculadora de volume</title>
 </head>
 <body>
+    <ul>
     <header>Calculadora de Volume</header>
-    <label for="altura" id="altura">Altura (em cm):</label>
-    <input type="number" id="alturac" name="altura">
-    <label for="comprimento" id="comprimento">Comprimento (em cm):</label>
-    <input type="number" id="comprimentoc" name="comprimento">
-    <label for="latgura" id="largura">Largura (em cm):</label>
+
+    <li><label for="altura" id="altura">Altura (em cm):</label>
+    <input type="number" id="alturac" name="altura"></li>
+
+    <li><label for="comprimento" id="comprimento">Comprimento (em cm):</label>
+    <input type="number" id="comprimentoc" name="comprimento"></li>
+
+    <li><label for="largura" id="largura">Largura (em cm):</label>
+    <input type="number" id="largurac" name="largura"></li>
+    </ul>
 </body>
 </html>
