Adicionado Estilo e Modificação no script
Adicionei itens estéticos à calculadora para deixá-la com uma aparência agradável. Removi do script uma variável que não era necessária

--- a/site-root/index.html
+++ b/site-root/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de volume</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="app">
-        <h1>Calculadora de Volume</h1>
+        <header>Calculadora de Volume</header>
        
         <p>Digite os valores em cm e a Calculadora mostrará o volume</p>
         <ul>
