--- a/site-root/index.html
+++ b/site-root/index.html
@@ -22,6 +22,9 @@
         <p id="result"></p>
         
         <p id="test"></p>
+        <div id="footer">
+            <p>Criado por Gabriel Bianchessi - Código do app no <a href="https://github.com/gabriel-bianchessi/Calculadora-de-volume" title="Projeto no GitHub">GitHub</a></p>
+        </div>
 
         <script src="script.js"></script>
     </div>
